--- a/notebooks/list-crawler-root-parse.ipynb
+++ b/notebooks/list-crawler-root-parse.ipynb
@@ -111,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pack_link = pack_links[5]"
+    "pack_link = pack_links[12]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,22 +138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('STRUCTURE DECK 混沌の三幻魔', '/list/sd38/')"
+       "('DARK NEOSTORM', 'dane', '/list/dane/')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pack_title, pack_link"
+    "pack_title, pack_link.split('/')[-2], pack_link"
    ]
   },
   {
